# hp-pinephone

./: Brewfile  gems  test.rb
.github/workflows/: build.yml
support/: mingw32.cmake
support/raylib/: platform_sdl.h  rgestures.h  sdl.patch
support/tlsuv/: CMakeLists.txt  FindMbedTLS.cmake  mbedtls.patch
support/tlsuv/mbedtls/: CMakeLists.txt
support/tlsuv/uv_link/: CMakeLists.txt
